# server

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
controllers/: auth_controller.py  chat_controller.py  media_controller.py
database/: connection.py  create_tables.py  schema.puml  seeder.py  tables.py
forms/: auth.py  chat_query.py  upload_form.py
models/: auth.py  chat.py  core.py  media.py  media_type.py  medias.py  message.py  posts.py  task.py  user.py  users.py
repositories/: auth_repository.py  chat_repository.py  media_repository.py  vector_repository.py
repositories/services/: generic_one_prompt_service.py  summary_service.py
responses/: auth.py  chat.py
routes/: auth_router.py  chat_router.py  media_router.py  post_router.py  test_router.py  user_router.py
schemas/: models.py
scripts/: model_installer.py
services/: embedder.py  model_installer.py
temp/: files.txt
utils/: enums.py  form_helper.py  model_selector.py  post_crud.py  user_auth.py
